--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.11.1",
     "@react-native-vector-icons/feather": "^12.0.1",
     "@react-native/new-app-screen": "0.80.0",
     "@react-navigation/native": "^7.1.14",
@@ -17,6 +18,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "react": "19.1.0",
     "react-native": "0.80.0",
+    "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "^4.11.1",
     "react-native-vector-icons": "^10.2.0",
