--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.10.0",
     "react": "19.1.0",
     "react-native": "0.80.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "^4.11.1",
