--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-picker/picker": "^2.11.1",
     "@react-native-vector-icons/feather": "^12.0.1",
     "@react-native/new-app-screen": "0.80.0",
+    "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "@reduxjs/toolkit": "^2.8.2",
