--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "^4.11.1",
+    "react-native-size-matters": "^0.4.2",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0"
   },
