--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "axios": "^1.10.0",
     "react": "19.1.0",
     "react-native": "0.80.0",
+    "react-native-actions-sheet": "^0.9.7",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-picker-select": "^9.3.1",
+    "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-safe-area-context": "^5.5.0",
     "react-native-screens": "^4.11.1",
     "react-native-size-matters": "^0.4.2",
@@ -39,7 +41,7 @@
     "@react-native/babel-preset": "0.80.0",
     "@react-native/eslint-config": "0.80.0",
     "@react-native/metro-config": "0.80.0",
-    "@react-native/typescript-config": "0.80.0",
+    "@react-native/typescript-config": "^0.80.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
