--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "^7.3.21",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
+    "formik": "^2.4.6",
     "react": "19.1.0",
     "react-native": "0.80.0",
     "react-native-actions-sheet": "^0.9.7",
@@ -29,7 +30,8 @@
     "react-native-screens": "^4.11.1",
     "react-native-size-matters": "^0.4.2",
     "react-native-vector-icons": "^10.2.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
