--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "19.1.0",
     "react-native": "0.80.0",
     "react-native-actions-sheet": "^0.9.7",
+    "react-native-collapsible": "^1.6.2",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-picker-select": "^9.3.1",
